# ocaml-struct-diff

./: LICENSE.md  README.md  dune-project  struct-diff.opam
lib/: dune
